--- a/mamar_bank/requirements.txt
+++ b/mamar_bank/requirements.txt
@@ -2,6 +2,7 @@ asgiref
 crispy-bootstrap5
 crispy-forms-gds
 distlib
+dj-database-url
 Django
 django-crispy-forms
 django-environ
@@ -11,6 +12,7 @@ mysql-connector-python
 pillow
 platformdirs
 psycopg2
+psycopg2-binary
 PyAutoGUI
 PyGetWindow
 PyMsgBox
@@ -19,5 +21,6 @@ PyRect
 PyScreeze
 pytweening
 sqlparse
+typing_extensions
 tzdata
 virtualenv
